--- a/vyapara1app/templates/company/create_sale.html
+++ b/vyapara1app/templates/company/create_sale.html
@@ -161,19 +161,23 @@
 
       <div class="container-fluid containerprof" style="width: 150%;">
         <div>
-          <form action="" class="mt-2 mb-4" method="post" enctype="multipart/form-data">
+          <form action="{% url 'add_creditnote' %}" class="mt-2 mb-4" method="post" enctype="multipart/form-data">
               {% csrf_token %}
+              
               <div class="container">
                 <div class="row">
                     <div class="col-md-4">
                         <!-- Input field on the left side -->
                       <select id="partySelect" name="partyname " onclick="updateSourceOfSupply()" class="form-control border-secondary">
                         <option >Select a Party</option>
-                        {% for p in parti %}
-                        <option id="{{p.party_name}}"  data-state="{{ p.state }}">{{p.party_name}}</option>
+                        {% for p in party %}
+                         {% if p.cid_id == cmp.cid %}
+                           <option id="{{p.id}}"  data-state="{{ p.state }}">{{p.party_name}}</option>
+                         {% endif %}
                         {% endfor %}
                       </select>
                     </div>
+
                     <div class="col-md-1">
                       <button id="modal_closing" type="button" class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#partycreation" data-bs-whatever="@mdo">
                         <span class="fa fa-plus"></span>
@@ -199,7 +203,7 @@
              
               <div class="form-group mb-3  justify-content-end" style="margin-left:990px;margin-top:-20px;">
                 <label for="Return No">Return No.:</label>
-                <label for="Return No"></label>
+                <label for="Return No" name="creditno">{{credit_note}}</label>
               </div>
               <div class="form-group  justify-content-end" style="margin-left:990px;margin-top:-10px;">
                 <label for="Invoice No">Invoice No.:</label>
@@ -225,7 +229,7 @@
                   </div>
                 </div>
               </div>
-              <label for="source of supply">{{p.state}}</label>
+              <label for="source of supply"></label>
               <div class="form-group  justify-content-end" style="margin-left:990px;margin-top:12px;">
                 <div class="row mt-1" >
                   <div class="col-md-3">
@@ -235,7 +239,7 @@
                   
                   <input value="{{p.state}}" id="partystateValue" type="hidden">
                  
-                  <input value="{{company.state}}" id="companystateValue" type="hidden">
+                  <input value="{{cmp.state}}" id="companystateValue" type="hidden">
                   <div class="col-md-2">
                     <select name="destination" id="plosu" class="form-control bg-white text-dark" style="width:280px;margin-left:-150px;margin-top:12px;"  >
                       <option value="" selected hidden>Select</option>
@@ -469,25 +473,47 @@
                           </div>
                       </div>
                   </div>
-              </div>
-          </div>
+                </div>
 
-       
-            <div class="container" style='marhin-top:20px;'>
-              <div class="row">
-                  <div class="col-md-4">
-                    <select class="form-control">
-                        <option>Cash</option>
-                        <option>UPI</option>
-                        <option>Cheque</option>
-                      <select>
-                  </div>
+              </div>
+            <div class="row">
+              <div class="col-md-3">
+                  <label class="col-form-label">Payment Method</label>
+                  <select class="form-control border-secondary my-select" id="pay_method" name="payment_method" style="color: black;background-color: white;margin-left:250px;">
+                    <option value="" selected hidden>Select Payment Method</option>
+                    <option value="Cash">Cash</option>
+                    <option value="Cheque">Cheque</option>
+                    <option value="UPI">UPI</option>
+                    {% for b in bank %}
+                    <option value="{{b.id}}">{{b.bank_name}}</option>
+                    {% endfor %}
+                 </select>
+              </div>
+    
+
+    
+              <div class="col-md-3">
+                <div style="display:none;margin-top:1rem;"  id="chequediv">
+                    <label class="col-form-label" ></label>
+                    <input type="text" class="form-control border-secondary" name="cheque_id" id="cheque_id" placeholder="Enter Cheque ID" style="color: black;background-color: white;margin-left:250px;">
+                </div>
+
+                <div style="display:none;margin-top:1rem;" id="upidiv">
+                    <label class="col-form-label" ></label>
+                    <input type="text" class="form-control border-secondary" name="upi_id" id="upi_id" placeholder="Enter UPI ID" style="color: black;background-color: white;margin-left:250px;">
+                </div>
+
+                <div style="display:none;margin-top:1rem;" id="bnkdiv">
+                    <label class="col-form-label" ></label>
+                    <input type="text" class="form-control border-secondary" name="bnk_id" id="bnk_id" style="color: black;background-color: white;margin-left:250px;" readonly>
+                </div>
               </div>
             </div>
+
             <div class="row py-5 border-bottom" style="margin-left:250px;">
                 <div class="col-md-8 d-flex flex-column w-60 text-dark">
                     <label for="">Description</label>
-                    <textarea name="ter_cond" id="" cols="10" rows="3" class="form-control"
+                    <textarea name="description" id="" cols="10" rows="3" class="form-control"
                         placeholder="Add any Description" style="width:50%;"></textarea>
                 </div>
               </div>
@@ -1972,6 +1998,55 @@ $(document).on("change", "#plosu", function(){
       });
     </script>
    {% endcomment %}
+
+
+   <script>
+    $(document).ready(function() {
+        $("#pay_method").change(function() {
+            var x=$('#pay_method').val();
+            if(x==='Cash'){
+                $('#chequediv').hide()
+                $('#bnkdiv').hide()
+                $('#upidiv').hide()
+                document.getElementById('cheque_id').value=null
+                document.getElementById('upi_id').value=null
+                document.getElementById('bnk_id').value=null
+            } else if(x==='Cheque') {
+                $('#chequediv').show()
+                $('#bnkdiv').hide()
+                $('#upidiv').hide()
+                document.getElementById('upi_id').value=null
+                document.getElementById('bnk_id').value=null
+            } else if(x==='UPI') {
+                $('#upidiv').show()
+                $('#bnkdiv').hide()
+                $('#chequediv').hide()
+                document.getElementById('cheque_id').value=null
+                document.getElementById('bnk_id').value=null
+            } else {
+                $('#bnkdiv').show()
+                $('#chequediv').hide()
+                $('#upidiv').hide()
+                document.getElementById('cheque_id').value=null
+                document.getElementById('upi_id').value=null
+
+                $.ajax({
+                    type: "POST",
+                    url: "{% url 'credit_bankdetails' %}",
+                    data: {
+                        id: x,
+                        csrfmiddlewaretoken: '{{ csrf_token }}'
+                    },
+                    success: function (response) {
+                        document.getElementById('cheque_id').value=null
+                        document.getElementById('upi_id').value=null
+                        document.getElementById("bnk_id").value = response.bank_no;
+                    }
+                });
+            }
+        });
+    });
+</script>
  
 
           
