--- a/vyapara1app/templates/company/create_sale.html
+++ b/vyapara1app/templates/company/create_sale.html
@@ -204,6 +204,7 @@
               <div class="form-group mb-3  justify-content-end" style="margin-left:900px;margin-top:-20px;">
                 <label for="Return No">Return No.:</label>
                 <label for="Return No" name="creditno">{{credit_note}}</label>
+                <input name="creditno" value="{{credit_note}}" type="hidden">
               </div>
               <div class="form-group  justify-content-end" style="margin-left:900px;margin-top:-10px;">
                 <label for="Invoice No">Invoice No.:</label>
