--- a/vyapara1app/templates/company/creditlist.html
+++ b/vyapara1app/templates/company/creditlist.html
@@ -1,7 +1,18 @@
 {% extends 'company/src/html/base.html' %}
 {% block content %}
 {% load static %}
+
+{% load my_extras %}
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+
 
 <style>
 
@@ -92,6 +103,7 @@
 
 
 <div class="div_continer" style=" margin-left: 18rem; height: 1000vh;">
+    
     <div class="row pt-0 m-0" >
     
         <div class="card p-0 bg-light bs" style="margin-top:70px;"><br>
@@ -101,15 +113,16 @@
                         <div class="col-md-3" style="margin-left: 5vh;">
                             <div class="form-group">
                                 <label for="fromDate" style="color: black; margin-bottom: 1vh;">From Date:</label>
-                                <input type="date" class="form-control h-100 border-secondary" id="fromDate" style="color: black; background-color: white;" onchange="filterDates()"> 
+                                <input type="date" class="form-control h-100 border-secondary" id="fromDate" style="color: black; background-color: white;" onclick="filterDates()"> 
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="toDate" style="color: black; margin-bottom: 1vh;">To Date:</label>
-                                <input type="date" class="form-control h-100 border-secondary" id="toDate" style="color: black; background-color: white;" onchange="filterDates()">
+                                <input type="date" class="form-control h-100 border-secondary" id="toDate" style="color: black; background-color: white;" onclick="filterDates()">
                             </div>
                         </div>
+
                         <div class="col-md-2"></div>
                         <div class="col-md-2 text-right" style="margin-left: 3vh;">
                             <button class="btn mt-2" type="button" onclick="ExportToExcel()" style="margin-right: 1vh; margin-left: 24vh;margin-bottom:-13vh;">
@@ -148,8 +161,8 @@
         </div>
     <div style="margin-top:50px;                   ">
 
-        <div class="table-responsive" style="margin-left: 20px; margin-right: 40px;" id="tablediv">
-            <table class="table align-middle mb-0 bg-white table-striped">
+        <div  style="margin-left: 20px; margin-right: 40px;overflow: scroll;height: 28rem; width: 97%;" id="tablediv">
+            <table class="table table-bordered table-info table-striped tb table-responsive w-100" id="billtable">
                 <thead class="bg-info">
                 <tr class="text-light" style="color:black;">
                     <th  class="bg-secondary text-white" >#</th>
@@ -213,7 +226,7 @@
                             &nbsp;<a class="btn btn-info" onclick="filterTable(5)">Apply</a>
                         </div>
                     </th>
-                    <th class="bg-secondary text-white extra">
+                    {% comment %} <th class="bg-secondary text-white extra">
                         ACTION
                         &nbsp; <a onclick="toggleDropdown(6)"><i class="fa fa-filter" aria-hidden="true"></i></a>
                         <div class="dropdown-content" id="dropdownContent6">
@@ -222,7 +235,7 @@
                             <a class="btn btn-info" onclick="cleardropdown(6)">Clear</a> 
                             &nbsp;<a class="btn btn-info" onclick="filterTable(6)">Apply</a>
                         </div>
-                    </th>
+                    </th> {% endcomment %}
                     <th class="bg-secondary text-white extra">
                         BY
                         &nbsp; <a onclick="toggleDropdown(7)"><i class="fa fa-filter" aria-hidden="true"></i></a>
@@ -239,15 +252,16 @@
                 <tbody>
                     {% for c in credit %}
                 <tr>
-                    <td  class="clickable-row" style="color: black;" data-href="#">{{forloop.counter}}</td>
-                    <td class="clickable-row" style="color: black;" data-href="#">{{c.date| date:'d-m-Y'}}</td>
-                    <td class="clickable-row" style="color: black;" data-href="#">{{c.retrn_no}}</td>
-                    <td class="clickable-row" style="color: black;" data-href="#">{{c.party.party_name}}</td>
-                    <td class="clickable-row" style="color: black;" data-href="#">{{c.pay_method}}</td>
+                    <td  class="" style="color: black;" data-href="detail_creditnote/{{ c.id }}">{{forloop.counter}}</td>
+                    <td class="clickable-row" style="color: black;" data-href="detail_creditnote/{{ c.id }}">{{c.date| date:'d-m-Y'}}</td>
+                    <td class="clickable-row" style="color: black;" data-href="detail_creditnote/{{ c.id }}">{{c.retrn_no}}</td>
+                    <td class="clickable-row" style="color: black;" data-href="detail_creditnote/{{ c.id }}">{{c.party.party_name}}</td>
+                    <td class="clickable-row" style="color: black;" data-href="detail_creditnote/{{ c.id }}">{{c.pay_method}}</td>
                     
-                    <td class="clickable-row" style="color: black;" data-href="#">{{c.subtotal}}</td>
-                    <td class="clickable-row" style="color: black;" data-href="#">{{c.balance}}</td>
-                    <td class="clickable-row" style="color: black;" data-href="#">{{c.retrn_no}}</td>
+                    <td class="clickable-row" style="color: black;" data-href="detail_creditnote/{{ c.id }}">{{c.grandtotal}}</td>
+                    <td class="clickable-row" style="color: black;" data-href="detail_creditnote/{{ c.id }}">{{c.balance}}</td>
+                    {% comment %} <td class="clickable-row extra" style="color: black;" data-href="detail_creditnote/{{ c.id }}"></td> {% endcomment %}
+                    <td class="clickable-row extra" style="color: black;" data-href="detail_creditnote/{{ c.id }}">{{c.company.company_name}}</td>
                     <td class="pt-3 m-0 extra">
                         <div class="btn-group">
                             <button style="border: none;background: none;" type="button" class="ropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
@@ -257,11 +271,11 @@
                               <li><a class="dropdown-item fw-bold tb hide_table_text_v" href=""><span class="fa fa-eye pe-2 tg"></span> View </a></li>
                               <li><a class="dropdown-item fw-bold tb hide_table_text_v" href=""><span class="fa fa-edit pe-2 tj"></span> Edit</a></li>
                               <li><a class="dropdown-item fw-bold tb hide_table_text_v" href=""><span class="fa fa-history pe-2 th"></span> History</a></li>
-                              <li><a class="dropdown-item fw-bold tb hide_table_text_d" onclick="deletepbill('{{p.id}}')"><span class="fa fa-trash-alt tr" style="padding-inline-start: 0.1rem;padding-inline-end:0.7rem ;"></span> Delete</a></li>
+                              <li><a class="dropdown-item fw-bold tb hide_table_text_d" onclick="deletepbill('{{c.id}}')"><span class="fa fa-trash-alt tr" style="padding-inline-start: 0.1rem;padding-inline-end:0.7rem ;"></span> Delete</a></li>
                             </ul>
                         </div>
                     </td>
-                    <td style="color: black;" hidden>{{p.advance}}</td>
+                    <td style="color: black;" hidden>{{c.advance}}</td>
                 
                 </tr>
                 {% endfor %}
@@ -276,7 +290,7 @@
                 <thead >
                     <tr class="fs-2 tb" >
                         <th> DATE </th>
-                        <th> BILL NO </th>
+                        <th> REF NO </th>
                         <th> PARTY NAME </th>
                         <th> PAYMENT TYPE </th>
                         <th> AMOUNT </th>
@@ -284,14 +298,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for p in pbill %}
+                    {% for c in credit %}
                     <tr>
-                        <td>{{p.billdate | date:'d-m-Y'}}</td>
-                        <td>{{p.billno}}</td>
-                        <td>{{p.party.party_name}}</td>
-                        <td>{{p.pay_method}}</td>
-                        <td>{{p.grandtotal}}</td>
-                        <td>{{p.balance}}</td>
+                        <td>{{c.date | date:'d-m-Y'}}</td>
+                        <td>{{c.retrnno}}</td>
+                        <td>{{c.party.party_name}}</td>
+                        <td>{{c.pay_method}}</td>
+                        <td>{{c.grandtotal}}</td>
+                        <td>{{c.balance}}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -435,6 +449,99 @@
         }
     });
 </script>
+<script>
+    function deletepbill(id)
+    {
+        swal({
+            title: "Confirmation !",
+            text: "Do you want to Delete this Credit Note?",
+            icon: "warning",
+            buttons: true,
+            dangerMode: true,
+        })
+        .then((willDelete) => {
+            if (willDelete) {
+                swal({
+                    title: "Deleted !",
+                    text: "Credit Note Deleted Successfully!",
+                    icon: "success",
+                    buttons: false,
+                })
+                .then((willDelete) => {
+                    if (willDelete) {
+                        window.location.href = "{% url 'delete_CreditNote' 0 %}".replace('0', id);
+                    } else {
+                        window.location.href = "{% url 'delete_CreditNote' 0 %}".replace('0', id);
+                    }
+                });
+            } else {
+                swal("Action Cancelled!");
+            }
+        });
+    }
+</script>
+
+<script>
+    function uploadFile() {
+        const form = document.getElementById('excelForm');
+        const formData = new FormData(form);
+        fetch('import_creditnote', {
+            method: 'POST',
+            body: formData
+        })
+        .then(data => {
+            swal({
+                title: "Imported !",
+                text: "Purchase Bill Import Successfull!",
+                icon: "success",
+                buttons: false,
+            })
+        })
+        .then(response => {
+            setTimeout(function () {
+                location.reload();
+            }, 1250);
+        })
+        .catch(error => {
+            swal({
+                title: "Error !",
+                text: "Purchase Bill Import Unuccessfull!",
+                icon: "warning",
+                buttons: false,
+            })
+        });
+    }
+</script>
+
+
+
+<script>
+    var table = document.getElementById('billtable');
+    var rows = table.getElementsByTagName('tr');
+    for (var i = 1; i < rows.length; i++) {
+        var pid = rows[i].getElementsByTagName('td')[1].innerText;
+        findhistory(i,pid)            
+    }
+    function findhistory( rowid,pid){
+        $.ajax({
+            type : 'POST',
+            url: "{% url 'creditnotehistory' %}",
+            data: { 
+                id: pid ,
+                csrfmiddlewaretoken: '{{ csrf_token }}'
+            },
+            success: function(data){
+                rows[rowid].getElementsByTagName('td')[6].innerText=data.action;
+                rows[rowid].getElementsByTagName('td')[7].innerText=data.name;
+                if(data.action== 'Created'){
+                    rows[rowid].getElementsByTagName('td')[6].style.color = 'Red'
+                }else{
+                    rows[rowid].getElementsByTagName('td')[6].style.color = '#154c79'
+                }
+            }
+        });
+    }
+</script>
 
 <script>
     function cleardropdown(index){
@@ -534,81 +641,26 @@
 
 
 <script>
-    function uploadFile() {
-        const form = document.getElementById('excelForm');
-        const formData = new FormData(form);
-        fetch('import_purchase_bill', {
-            method: 'POST',
-            body: formData
-        })
-        .then(data => {
-            swal({
-                title: "Imported !",
-                text: "Purchase Bill Import Successfull!",
-                icon: "success",
-                buttons: false,
-            })
-        })
-        .then(response => {
-            setTimeout(function () {
-                location.reload();
-            }, 1250);
-        })
-        .catch(error => {
-            swal({
-                title: "Error !",
-                text: "Purchase Bill Import Unuccessfull!",
-                icon: "warning",
-                buttons: false,
-            })
-        });
-    }
-</script>
-
-
-
-<script>
-    calculatetotal()
-
-    function calculatetotal(){
-        var table = document.getElementById('billtable');
-        var rows = table.getElementsByTagName('tr');
-        tpaid = 0;
-        tunpaid = 0;
-        ttotal = 0; 
-        for (var i = 1; i < rows.length; i++) {
-            if(rows[i].style.display !='none'){
-                var pcells = rows[i].getElementsByTagName('td')[9];
-                var ptextValue = pcells.textContent || pcells.innerText;
-                tpaid += parseFloat(ptextValue)
-
-                var ucells = rows[i].getElementsByTagName('td')[5];
-                var utextValue = ucells.textContent || ucells.innerText;
-                tunpaid += parseFloat(utextValue)
-
-                var tcells = rows[i].getElementsByTagName('td')[4];
-                var ttextValue = tcells.textContent || tcells.innerText;
-                ttotal += parseFloat(ttextValue)
-            }
-        }
-        document.getElementById('paidval').textContent = tpaid
-        document.getElementById('unpaidval').textContent = tunpaid
-        document.getElementById('totalval').textContent = ttotal
-    }
-</script>
-<script>
     function filterDates() {
         var fromDate = document.getElementById("fromDate").value;
-        var selectedDate = new Date(fromDate);
-        selectedDate.setDate(selectedDate.getDate() - 1);
+        console.log("From Date:", fromDate);
+
+        var selectedDate = fromDate ? new Date(fromDate) : null;
+
+        if (selectedDate) {
+            selectedDate.setDate(selectedDate.getDate() - 1);
+        }
+
         var toDate = document.getElementById("toDate").value;
         var table = document.getElementById("billtable");
         var rows = table.getElementsByTagName("tr");
         var emptyMessage = document.getElementById('emptyMessage');
         var isEmpty = true;
+
         for (var i = 1; i < rows.length; i++) {
             var currentDate = rows[i].getElementsByTagName("td")[0].innerText;
-            var date = new Date(currentDate.replace(/(\d{2})-(\d{2})-(\d{2})/, "$2/$1/$3"));
+            var date = new Date(currentDate);
+
             if ((fromDate && date >= selectedDate) || !fromDate) {
                 if ((toDate && date <= new Date(toDate)) || !toDate) {
                     rows[i].style.display = "table-row";
@@ -620,10 +672,11 @@
                 rows[i].style.display = "none";
             }
         }
+
         emptyMessage.style.display = isEmpty ? 'block' : 'none';
-        calculatetotal()
     }
 </script>
+
 
 <script>
     jQuery(document).ready(function($) {
@@ -631,6 +684,59 @@
             window.location = $(this).data("href");
         });
     });
+</script>
+<script>
+    document.getElementById("search_input").addEventListener("input", function() {
+        var input, filter, table, tr, td, i, txtValue;
+        input = document.getElementById("search_input");
+        filter = input.value.toUpperCase();
+        table = document.getElementById("billtable");
+        tr = table.getElementsByTagName("tr");
+        var emptyMessage = document.getElementById("emptyMessage");
+        var anyMatch = false;
+        for (i = 1; i < tr.length; i++) {
+            tr[i].style.display = "table-row";
+            var found = false;
+            for (td of tr[i].getElementsByTagName("td")) {
+                txtValue = td.textContent || td.innerText;
+                if (txtValue.toUpperCase().includes(filter)) {
+                    found = true;
+                    anyMatch = true;
+                    break;
+                }
+            }
+            if (!found) {
+                tr[i].style.display = "none";
+            }
+        }
+        emptyMessage.style.display = anyMatch ? "none" : "block";
+        calculatetotal()
+    });
+</script>
+<script>
+    function ExportToExcel(){
+        const table = document.querySelector('#excelbilltable');
+        const ws = XLSX.utils.table_to_sheet(table);
+        const wb = XLSX.utils.book_new();
+        XLSX.utils.book_append_sheet(wb, ws, 'Sheet1');
+        XLSX.writeFile(wb, 'Creditnote.xlsx');
+    }
+</script>
+
+<script>
+    function excelmodel(){
+        const table1 = document.querySelector('#billtablemodel');
+        const ws1 = XLSX.utils.table_to_sheet(table1);
+        const wb1 = XLSX.utils.book_new();
+        XLSX.utils.book_append_sheet(wb1, ws1, 'Sheet1');
+        XLSX.writeFile(wb1, 'PurchaseBillModel.xlsx');
+
+        const table2 = document.querySelector('#billtableitemmodel');
+        const ws2 = XLSX.utils.table_to_sheet(table2);
+        const wb2 = XLSX.utils.book_new();
+        XLSX.utils.book_append_sheet(wb2, ws2, 'Sheet1');
+        XLSX.writeFile(wb2, 'PurchaseBillItemModel.xlsx');
+    }
 </script>
 
 
