--- a/vyapara1app/templates/company/edit_creditnot.html
+++ b/vyapara1app/templates/company/edit_creditnot.html
@@ -90,7 +90,7 @@
                     <p></p>
                 
                 
-                        <form action="" method="post" enctype="multipart/form-data"   onsubmit="return validatepurchasebill()"  novalidate>
+                        <form action="{% url 'update_creditnote' credit.id %}" method="post" enctype="multipart/form-data"   onsubmit="return validatepurchasebill()"  novalidate>
                             {% csrf_token %}
                             <div class="page-content" >
                                 <div class="card radius-15">
@@ -101,7 +101,7 @@
                                             </div>
                                             <div class="col-md-7"></div>
                                             <div class="col-md-1">
-                                                <a href="{% url 'view_purchasebill' %}" style="text-align: right; font-size: large; color: black; margin-left: 8vh;">
+                                                <a href="{% url 'creditnote_list' %}" style="text-align: right; font-size: large; color: black; margin-left: 8vh;">
                                                     <i class="fa fa-times mt-2" aria-hidden="true"></i>'
                                                 </a>
                                             </div>
@@ -112,11 +112,11 @@
                                                 <div class="col-md-4">
                                                     <label class="col-form-label">Party</label>
                                                     <div class="d-flex">
-                                                        <select name="partyname" id="customer" class="form-control border-secondary" style="color: black; background-color: white;">
+                                                        <select name="partyname" id="customer" class="form-control border-secondary" style="color: black; background-color: white;"  onclick="updateSourceOfSupply()">
                                                             <option value="{{credit.party.id}}" selected hidden>{{credit.party.party_name}}</option>
-                                                            {% for p in part %}
+                                                            {% for p in party %}
                                                                 {% if p.cid_id == cmp.cid %}
-                                                                <option value={{p.id}}> {{ p.party_name }}</option>
+                                                                <option value="{{p.id}}"> {{ p.party_name }}</option>
                                                                 {% endif %}
                                                             {% endfor %}
                                                         </select> &nbsp;&nbsp;&nbsp;
@@ -231,7 +231,7 @@
                                                                         <select name='product[]' id="product{{ forloop.counter }}" class="form-control product border-secondary" onchange="changeprd(this.id)" style="color: black; background-color: white;">
                                                                             <option value="{{ j.product.id }}" selected hidden>{{ j.product.item_name }}</option>
                                                                             <option value=""  hidden>Select Product</option>
-                                                                            {% for i in item %}
+                                                                            {% for i in product %}
                                                                                 {% if i.cid_id == cmp.cid %}
                                                                                     <option value="{{ i.id }}" >{{ i.item_name  }} </option>
                                                                                 {% endif %}
@@ -259,9 +259,9 @@
                                                                     <input type="text" id="intrataxval{{ forloop.counter }}" value="{{j.product.item_gst}}" hidden>
                                                                     <input type="text" id="intertaxval{{ forloop.counter }}" value="{{j.product.item_igst}}" hidden>
                                                                     <input type="text"  id="select_tax{{ forloop.counter }}" placeholder="Tax Rate" class="form-control seltax d-none">
-                                                                    {% if pbill.supplyplace  == 'State'  %}
+                                                                    {% if credit.supplyplace  == 'State'  %}
                                                                         <select name='tax1[]' id="tax1{{ forloop.counter }}" class="form-control tax intra_tax d-flex border-secondary" style="color: black; background-color: white;">
-                                                                            <option selected value="{{j.tax}}" hidden>{{j.tax}}</option>
+                                                                            <option selected value="{{j.tax}}" >{{j.tax}}</option>
                                                                             <option  value=" " hidden>Select Tax</option>
                                                                             <option value="GST0[0%]" >GST0[0%]</option>
                                                                             <option value="GST3[3%]">GST3[3%]</option>
@@ -290,7 +290,7 @@
                                                                             <option value="GST28[28%]">GST28[28%]</option>
                                                                         </select>
                                                                         <select name='tax2[]' id="tax2{{ forloop.counter }}" class="form-control tax inter_tax d-flex border-secondary" style="color: black; background-color: white;">
-                                                                            <option value="{{j.tax}}" selected hidden>{{j.tax}}</option>
+                                                                            <option value="{{j.tax}}" selected >{{j.tax}}</option>
                                                                             <option  value=" " hidden>Select Tax</option>
                                                                             <option value="IGST0[0%]" >IGST0[0%]</option>
                                                                             <option value="IGST3[3%]">IGST3[3%]</option>
@@ -301,7 +301,6 @@
                                                                         </select>
                                                                     {% endif %}
                                                                 </td>
-
                                                                 <td style="width:10%">
                                                                     <input type="number" name='discount[]' placeholder='Enter Discount' id="disc{{forloop.counter}}" value="{{j.discount|default:0}}" class="form-control disc border-secondary" step=0 min=0 style="color: black; background-color: white;">
                                                                 </td>
@@ -1064,9 +1063,9 @@
 </script>
 
 <script>
-    $(document).on('change','#invoicedate', function() {
+    $(document).on('change','#inv_date', function() {
         var days = parseInt($('#termadd').val());
-        order_date =new Date( document.getElementById("invoicedate").value)
+        order_date =new Date( document.getElementById("inv_date").value)
         if (!isNaN(order_date.getTime())) {
             const endDate = new Date(order_date);
             endDate.setDate(endDate.getDate() + days);
@@ -1754,6 +1753,35 @@
 
     });
 </script>
+
+
+
+<script>
+    function selectOptionByValue(selectElement, value) {
+        for (var option of selectElement.options) {
+            if (option.value === value) {
+                option.selected = true;
+                break;
+            }
+        }
+    }
+  
+    function updateSourceOfSupply() {
+        var partySelect = document.getElementById('partySelect');
+        var partyState = partySelect.options[partySelect.selectedIndex].getAttribute('data-state');
+        
+        var companyState = document.getElementById('companystateValue').value.trim();
+        var destinationSelect = document.getElementById('plosu');
+  
+        if (companyState === partyState) {
+            selectOptionByValue(destinationSelect, 'State');
+        } else {
+            selectOptionByValue(destinationSelect, 'Other State');
+        }
+        handleSourceOfSupply();
+    }
+  </script>
+  
 
 {% endblock %}
 
